# ball

./: .gitattributes  .gitignore  .releaserc.json  .socraticode.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  PACKAGES_CHANGELOG.md  README  README.md  ball.schema.json  buf.gen.yaml  ci_dart_log.txt  codecov.yml  dart_test_out.txt  pubspec.yaml
cpp/: -o  AGENTS.md  CMakeLists.txt  CMakePresets.json  buf.gen.cpp.yaml  build-cov-build.sh  build-cov-configure.sh  build-cov-floor.sh  build-cov-report.sh  build-cov-run.sh
cpp/build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ball_cpp.slnx  buf_breaking.vcxproj  buf_breaking.vcxproj.filters  buf_check.vcxproj  buf_check.vcxproj.filters  buf_format.vcxproj  buf_format.vcxproj.filters  buf_lint.vcxproj  buf_lint.vcxproj.filters  cmake_install.cmake
cpp/build2/compiler/: ALL_BUILD.vcxproj  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ball_cpp_compile.vcxproj  ball_cpp_compile.vcxproj.filters  ball_cpp_compiler.slnx  ball_cpp_compiler_lib.vcxproj  ball_cpp_compiler_lib.vcxproj.filters  cmake_install.cmake
cpp/build2/encoder/: ALL_BUILD.vcxproj  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ball_cpp_encode.vcxproj  ball_cpp_encode.vcxproj.filters  ball_cpp_encoder.slnx  ball_cpp_encoder_lib.vcxproj  ball_cpp_encoder_lib.vcxproj.filters  cmake_install.cmake
cpp/build2/engine/: ALL_BUILD.vcxproj  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ball_cpp_engine.slnx  ball_cpp_engine.vcxproj  ball_cpp_engine.vcxproj.filters  ball_cpp_runner.vcxproj  ball_cpp_runner.vcxproj.filters  cmake_install.cmake
cpp/build2/shared/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ball_cpp_shared.slnx  ball_emit_runtime_gen.vcxproj  ball_emit_runtime_gen.vcxproj.filters  ball_shared.vcxproj  ball_shared.vcxproj.filters  cmake_install.cmake
cpp/build2/test/: ALL_BUILD.vcxproj  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ball_cpp_tests.slnx  cmake_install.cmake  test_compiler.vcxproj  test_compiler.vcxproj.filters  test_conformance.vcxproj  test_conformance.vcxproj.filters  test_e2e.vcxproj  test_e2e.vcxproj.filters  test_encoder.vcxproj  test_encoder.vcxproj.filters  test_engine.vcxproj  test_engine.vcxproj.filters  test_perf.vcxproj  test_perf.vcxproj.filters  test_selfhost_compile.vcxproj  test_selfhost_compile.vcxproj.filters  test_selfhost_conformance.vcxproj  test_selfhost_conformance.vcxproj.filters  test_snapshot.vcxproj  test_snapshot.vcxproj.filters
cpp/build3/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ball_cpp.slnx  buf_breaking.vcxproj  buf_breaking.vcxproj.filters  buf_check.vcxproj  buf_check.vcxproj.filters  buf_format.vcxproj  buf_format.vcxproj.filters  buf_lint.vcxproj  buf_lint.vcxproj.filters  cmake_install.cmake
cpp/build3/compiler/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ball_cpp_compile.vcxproj  ball_cpp_compile.vcxproj.filters  ball_cpp_compiler.slnx  ball_cpp_compiler_lib.vcxproj  ball_cpp_compiler_lib.vcxproj.filters  cmake_install.cmake
cpp/build3/encoder/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ball_cpp_encode.vcxproj  ball_cpp_encode.vcxproj.filters  ball_cpp_encoder.slnx  ball_cpp_encoder_lib.vcxproj  ball_cpp_encoder_lib.vcxproj.filters  cmake_install.cmake
cpp/build3/engine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ball_cpp_engine.slnx  ball_cpp_engine.vcxproj  ball_cpp_engine.vcxproj.filters  ball_cpp_runner.vcxproj  ball_cpp_runner.vcxproj.filters  cmake_install.cmake
cpp/build3/shared/: ALL_BUILD.vcxproj  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ball_cpp_shared.slnx  ball_emit_runtime_gen.vcxproj  ball_emit_runtime_gen.vcxproj.filters  ball_shared.vcxproj  ball_shared.vcxproj.filters  cmake_install.cmake
cpp/build3/test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ball_cpp_tests.slnx  cmake_install.cmake  test_compiler.vcxproj  test_compiler.vcxproj.filters  test_conformance.vcxproj  test_conformance.vcxproj.filters  test_e2e.vcxproj  test_e2e.vcxproj.filters  test_encoder.vcxproj  (+11 more)
cpp/cli/: AGENTS.md  CMakeLists.txt
cpp/cmake/: AGENTS.md  BallSelfhostEngine.cmake  BufGenerate.cmake
cpp/compiler/: AGENTS.md  CMakeLists.txt
cpp/encoder/: AGENTS.md  CMakeLists.txt
cpp/engine/: CMakeLists.txt
cpp/shared/: AGENTS.md  CMakeLists.txt  ball_program_descriptor.h  ball_protobuf_rt.cpp  ball_protobuf_rt.h  ball_protobuf_rt_smoke.cpp  ball_rt_decode.cpp  ball_rt_decode.h  ball_runtime.h
cpp/test/: AGENTS.md  CMakeLists.txt  corpus_driver.cpp  diff_e2e.sh  e2e_fixture_list.h  errline.sh  full_e2e.sh  quick_e2e.sh  run_selfhost_tally.sh  scope_probe.cpp  test_ball_dyn.cpp  test_ball_file.cpp  test_ball_ir.cpp  test_ball_ir_descriptor.cpp  test_ball_rt_equivalence.cpp  test_cli.cpp  test_cli_parity.cpp  test_compiler.cpp  test_conformance.cpp  test_e2e.cpp  test_encoder.cpp  test_engine.cpp  test_perf.cpp  test_perf_micro.cpp  test_selfhost_conformance.cpp  test_shared.cpp  test_snapshot.cpp
python/cli/: AGENTS.md  pyproject.toml  requirements-dev.txt
python/compiler/: AGENTS.md  pyproject.toml  requirements-dev.txt
python/encoder/: AGENTS.md  pyproject.toml
python/engine/: .gitignore  AGENTS.md  pyproject.toml
python/runtime/: AGENTS.md  README.md  pyproject.toml
rust/: .gitignore  AGENTS.md  Cargo.toml
rust/cli/: AGENTS.md  Cargo.toml
rust/compiler/: Cargo.toml
rust/encoder/: Cargo.toml
rust/engine/: AGENTS.md  Cargo.toml
rust/shared/: Cargo.toml
(+2235 files in other folders)
