[workspace]
resolver = "3"
members = ["shared", "compiler", "encoder", "engine", "engine/tool", "cli", "cli/tool"]

# Phase 1a scaffold (issue #33): no Ball logic yet — just a compiling workspace
# with the five member crates wired together via path dependencies so later
# phases (proto bindings #34, compiler #36-38, encoder #42-43, engine #39,
# CLI #41) have a real dependency graph to build on.

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/Ball-Lang/ball"
rust-version = "1.85"

# Internal crate references, centralized here so every member Cargo.toml can
# depend on a sibling crate via `<crate> = { workspace = true }` instead of
# repeating a relative `path = "../..."`.
#
# Each carries BOTH `path` and `version`: `cargo publish` refuses a dependency
# that has only a `path` (a path dep is unresolvable off the publishing
# machine), so a `version` is mandatory for the crates to be publishable. The
# `path` still wins for in-workspace builds/tests; the `version` is only
# consulted when the crate is consumed from crates.io. Keep the version in
# lock-step with `[workspace.package] version` above — the publish workflow
# (.github/workflows/publish-crates.yml) publishes all five crates at the same
# version in dependency order (shared -> compiler/encoder -> engine -> cli), so
# each `^0.1.x` range is satisfied by the sibling published in the same run.
[workspace.dependencies]
ball-lang-shared = { path = "shared", version = "0.1.1" }
ball-lang-compiler = { path = "compiler", version = "0.1.1" }
ball-lang-encoder = { path = "encoder", version = "0.1.1" }
ball-lang-engine = { path = "engine", version = "0.1.1" }

# Protobuf runtime (issue #34): pinned to these exact versions because
# prost-reflect's DescriptorPool/DynamicMessage are required for later
# descriptor-driven work (MessageCreation, google.protobuf.Struct metadata).
# Google's upb-based `protobuf` v4 crate is rejected — it exposes no
# reflection API.
prost = "0.14.4"
prost-reflect = "0.16.4"

# Insertion-ordered map backing `ball_lang_shared::BallMap` (issue #35): the Dart
# reference engine uses a `LinkedHashMap`/insertion-ordered `Map`, and the
# C++ self-host mirrors it with `BallOrderedMap` — `indexmap::IndexMap`
# gives Rust the same guarantee (build -> iterate preserves insertion order).
indexmap = "2"

# Rust source parser for `ball-lang-encoder` (issue #42) — the Rust analog of the
# TS encoder's TS-Compiler-API / the Dart encoder's `analyzer`. `features =
# ["full"]` is required for statement/expression parsing (the default
# feature set only covers items); `proc-macro2` supplies the `Span`-bearing
# token types `syn`'s AST nodes are built from (needed to read literal
# values off `syn::Lit` tokens).
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
